--- a/LittleFamilyApp/src/main/res/layout/activity_fslogin.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_fslogin.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:gravity="center_horizontal"
     android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,7 +8,13 @@
     tools:context="org.finlayfamily.littlefamily.activities.FSLoginActivity"
     android:weightSum="1">
 
-    <!-- Login progress -->
+    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="false"
+        android:layout_marginTop="16dp">
+
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -32,11 +38,6 @@
         android:text="@string/privacy_text"
         android:id="@+id/PrivacyTextView" />
 
-    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="false"
-        android:layout_marginTop="16dp">
-
         <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical">
 
@@ -47,7 +48,6 @@
 
             <EditText android:id="@+id/password" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified" android:inputType="textPassword"
                 android:maxLines="1" android:singleLine="true" />
@@ -58,9 +58,10 @@
                 android:textStyle="bold" />
 
         </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+</RelativeLayout>
 
 
 
