--- a/LittleFamilyApp/src/main/res/layout/activity_pgvlogin.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_pgvlogin.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:gravity="center_horizontal"
     android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,79 +8,88 @@
     tools:context="org.finlayfamily.littlefamily.activities.PGVLoginActivity"
     android:weightSum="1">
 
-    <!-- Login progress -->
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pgvlogo"
-        android:src="@drawable/pgv_logo" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/pgv_agreements_text"
-        android:id="@+id/AgreementsTextView"
-        android:layout_marginBottom="10dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/pgv_privacy_text"
-        android:id="@+id/PrivacyTextView" />
-
     <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="false"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center_horizontal">
+    <!-- Login progress -->
 
-        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:orientation="vertical">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/pgv_url"
-                android:inputType="textUri"
-                android:hint="@string/pgv_url_hint" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pgvlogo"
+            android:src="@drawable/pgv_logo"
+            android:layout_gravity="center_horizontal" />
 
-            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:hint="@string/prompt_pgvusername"
-                android:inputType="textEmailAddress" android:maxLines="1"
-                android:singleLine="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/pgv_agreements_text"
+            android:id="@+id/AgreementsTextView"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center_horizontal" />
 
-            <EditText android:id="@+id/password" android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:hint="@string/prompt_password"
-                android:imeActionId="@+id/email_sign_in_button"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified" android:inputType="textPassword"
-                android:maxLines="1" android:singleLine="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/pgv_privacy_text"
+            android:id="@+id/PrivacyTextView"
+            android:layout_gravity="center_horizontal" />
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:orientation="vertical">
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/default_id"
-                    android:hint="@string/default_id_hint"
-                    android:layout_weight="1" />
+                    android:id="@+id/pgv_url"
+                    android:inputType="textUri"
+                    android:hint="@string/pgv_url_hint" />
 
-                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent" android:layout_height="wrap_content"
-                    android:text="@string/action_sign_in_short"
-                    android:textStyle="bold"
-                    android:layout_weight="1" />
+                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:hint="@string/prompt_pgvusername"
+                    android:inputType="textEmailAddress" android:maxLines="1"
+                    android:singleLine="true" />
+
+                <EditText android:id="@+id/password" android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
+                    android:imeActionId="@+id/email_sign_in_button"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
+                    android:maxLines="1" android:singleLine="true" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/default_id"
+                        android:hint="@string/default_id_hint"
+                        android:layout_weight="1" />
+
+                    <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
+                        android:layout_width="match_parent" android:layout_height="wrap_content"
+                        android:text="@string/action_sign_in_short"
+                        android:textStyle="bold"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
             </LinearLayout>
+    </LinearLayout>
+        </ScrollView>
 
-        </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
+</RelativeLayout>
 
 
 
